fix the overlap

--- a/project/client/static/main.css
+++ b/project/client/static/main.css
@@ -12,7 +12,7 @@ html, body {
 }
 
 .footer {
-    position: fixed;
+    /* position: fixed; */
     bottom: 10px;
-    width: 87%;
+    width: 100%;
 }
